refactor: Store 소프트 딜리트 제외 조회 #10